--- a/common/pom.xml
+++ b/common/pom.xml
@@ -79,16 +79,6 @@
             <artifactId>commons-net</artifactId>
             <version>3.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.25</version>
-        </dependency>
         <!-- FtpUtil @Slf4j end -->
 
         <!-- fastjson start -->
@@ -179,6 +169,14 @@
             <version>2.8.3</version>
         </dependency>
         <!-- 阿里云存储 end -->
+
+        <!-- 富文本 ueditor start -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <!-- 富文本 ueditor end -->
 
     </dependencies>
     <build>
