--- a/weixinjspay/pom.xml
+++ b/weixinjspay/pom.xml
@@ -15,13 +15,20 @@
     <name>weixinjspay</name>
     <packaging>war</packaging>
 
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
+        <!-- utils start -->
+        <dependency>
+            <groupId>com.demo</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- utils end -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
