--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -2,17 +2,17 @@ server:
   tomcat:
     uri-encoding: UTF-8
   port: 8082
-  context-path: /epidemic
+  servlet:
+    context-path: /epidemic/web
 
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    initialize: false
-    url: jdbc:mysql://localhost:3306/xiaoxiao?characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/xiaoxiao?serverTimezone=UTC&useUnicode=true&charaterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
 
-#  devtools:
+  #  devtools:
 #    restart:
 #      additional-paths: src/main/java
 #      enabled: true
@@ -41,7 +41,8 @@ spring:
     suffix: .html
     mode: HTML5
     encoding: UTF-8
-    content-type: text/html
+    servlet:
+      content-type: text/html
 
 # 配置ftp服务器信息
 ftp:
