--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,10 +8,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -23,7 +24,6 @@
         <thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
 
         <weixin-java-miniapp.version>3.3.0</weixin-java-miniapp.version>
-        <io.springfox.version>2.5.0</io.springfox.version>
         <log4j2.version>2.6.2</log4j2.version>
     </properties>
 
@@ -49,19 +49,6 @@
         </dependency>
         <!-- 二维码 end -->
 
-        <!-- 微信小程序 start -->
-        <dependency>
-            <groupId>com.github.binarywang</groupId>
-            <artifactId>weixin-java-miniapp</artifactId>
-            <version>${weixin-java-miniapp.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.3.3</version>
-        </dependency>
-        <!-- 微信小程序 end -->
-
         <!-- FtpUtil @Slf4j start -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -80,14 +67,6 @@
             <version>3.6</version>
         </dependency>
         <!-- FtpUtil @Slf4j end -->
-
-        <!-- fastjson start -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.62</version>
-        </dependency>
-        <!-- fastjson end -->
 
         <!-- httpcomponents start -->
         <dependency>
@@ -170,6 +149,18 @@
         </dependency>
         <!-- 阿里云存储 end -->
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <!-- fastjson start -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
+        <!-- fastjson end -->
         <!-- 富文本 ueditor start -->
         <dependency>
             <groupId>org.json</groupId>
