--- a/api/pom.xml
+++ b/api/pom.xml
@@ -142,6 +142,19 @@
         </dependency>
         <!-- ObjectMapper end -->
 
+        <!-- jms start -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+        <!-- jms end -->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
