--- a/wxjspay/src/main/resources/application-dev.yml
+++ b/wxjspay/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
     uri-encoding: UTF-8
   port: 8084
   servlet:
-    context-path: /epidemic/wxjspay
+    context-path: /wxjspay
 
 
 wechat:
