--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>common</module>
         <module>api</module>
         <module>backend</module>
+        <module>weixinpay</module>
         <module>wxjspay</module>
         <module>wxminiapp</module>
         <module>mqtt.customer</module>
