--- a/mqtt.customer/src/main/resources/application.yml
+++ b/mqtt.customer/src/main/resources/application.yml
@@ -1,11 +1,15 @@
+
+server:
+  port: 8083
+
 spring:
   mqtt:
+    username: videoPlay
+    password: videoPlay
+    url: tcp://47.98.119.123:1883
     client:
       id: mqttId
     completionTimeout: 10000
     default:
       topic: topic
-    password: videoPlay
     qos: 1
-    url: tcp://47.98.119.123:1883
-    username: videoPlay
