--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,10 +81,25 @@
         <!-- fastdfs end -->
 
         <!-- easypoi start -->
+        <!--<dependency>-->
+            <!--<groupId>cn.afterturn</groupId>-->
+            <!--<artifactId>easypoi-spring-boot-starter</artifactId>-->
+            <!--<version>4.1.2</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>cn.afterturn</groupId>
-            <artifactId>easypoi-spring-boot-starter</artifactId>
-            <version>4.1.2</version>
+            <artifactId>easypoi-base</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.0.3</version>
         </dependency>
         <!-- easypoi end -->
 
