--- a/api/pom.xml
+++ b/api/pom.xml
@@ -23,6 +23,7 @@
 
         <log4j2.version>2.6.2</log4j2.version>
 
+        <docker.image.prefix>492782442</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -168,12 +169,34 @@
         </dependency>
 
     </dependencies>
+
+
     <build>
+        <finalName>boot-api</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+
+
 </project>
