--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/base-jpa?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/basejpa?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
 #    password: helloWorld
