--- a/websocket/src/main/resources/application.yml
+++ b/websocket/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/basejpa?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     username: root
-    password: 123456
-#    password: helloWorld
+#    password: 123456
+    password: helloWorld
 
 
   jpa:
