--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>websocket</module>
         <module>officialWebsite</module>
         <module>qrcode-auth</module>
+        <module>fastdfs</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
