--- a/qrcode-auth/src/main/resources/log4j.properties
+++ b/qrcode-auth/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.rootLogger=INFO,CONSOLE,ERROR,info
 #输出到控制台
 #配置日志信息的输出目的地
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-#默认为Ststem.out,指定输出控制台
+#默认为System.out,指定输出控制台
 log4j.appender.CONSOLE.Target=System.out
 #配置日志信息的输出格式=可以灵活的指定布局模式
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
