--- a/qrcode-auth/src/main/resources/application-dev.yml
+++ b/qrcode-auth/src/main/resources/application-dev.yml
@@ -5,27 +5,11 @@ server:
   servlet:
     context-path: /
 
----
-#spring:
-#  datasource:
-#    driverClassName: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://127.0.0.1:3306/basejpa
-#    username: root
-#    password: 123456
----
 
-#spring:
-#  jpa:
-#    database: MYSQL
-#    hibernate:
-#      ddl-auto: update
-#      naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQL5Dialect
-#    show-sql: true
+project:
+  domain: brightereyer.com
+  host: http://brightereyer.com:8092
 
----
 
 spring:
   thymeleaf:
@@ -37,28 +21,3 @@ spring:
     suffix: .html
     servlet:
       content-type: text/html
-
----
-
-
-# 配置ftp服务器信息
-ftp:
-  # ftp服务器的IP地址
-  url: 172.17.0.2
-  # 默认端口是21
-  port: 21
-  username: test
-  password: test
-  # ftp服务器存放文件的路径
-  remotePath: /home/vsftpd/test
-  # 本地需要上传的文件的路径
-  localDir: G:/MyFiles/test
-  # ftp上文件下载到本地存放的路径
-  downDir: G:/MyFiles/test
-
-
-swagger:
-  is:
-    enable: true
-
-
