--- a/qiniu/src/main/resources/qiniu.properties
+++ b/qiniu/src/main/resources/qiniu.properties
@@ -1,4 +1,4 @@
-qiniu.access-key=
-qiniu.secret-key=r_M4UOe-wBULxtFMFafU4k4oSl2Vh0B5C7XEHfZO
-qiniu.bucket=
-qiniu.bucket-url=
+qiniu.access-key=dFXhVMwiT-JTL9xZVY5XuyIWVaLhC5ujQIJX6USD
+qiniu.secret-key=qm3zJtHUXbf287wpMbaMdkFhQD4L39S21kxWrXHe
+qiniu.bucket=mybucket
+qiniu.bucket-url=https://images.brightereyer.com
