--- a/video/src/main/resources/application.properties
+++ b/video/src/main/resources/application.properties
@@ -27,10 +27,9 @@ mybatis.mapper-locations=classpath:mapping/*.xml
 spring.redis.host=192.168.99.100
 spring.redis.password=
 spring.redis.port=6379
-spring.redis.pool.max-idle=100
-spring.redis.pool.min-idle=1
-spring.redis.pool.max-active=1000
-spring.redis.pool.max-wait=-1
+spring.redis.jedis.pool.min-idle=1
+spring.redis.jedis.pool.max-idle=1000
+spring.redis.jedis.pool.max-wait=
 
 #log
 logging.config=classpath:logback.xml
