--- a/wxapp-diancan/wxdc-boot/src/main/resources/application.properties
+++ b/wxapp-diancan/wxdc-boot/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#tomcat 端口
+server.port=8088
+#部署时增加项目名
+server.servlet.context-path=/diancan/
+debug=true
+#########################################################
 #变量
 appid=wx46966fd292b7eefe
 secret=aafd006a905a36bc609aa6788c265c36
@@ -7,11 +13,6 @@ invalid_seventh=7
 #最大预约人数
 max_reserve=2
 #########################################################
-#tomcat 端口
-server.port=8088
-#部署时增加项目名
-#server.servlet.context-path=/yizhi/
-debug=true
 #logging.level.root=debug
 logging.level.com.wx.restaurant.mybatis.mapper=DEBUG
 #修改页面路径
@@ -32,17 +33,14 @@ spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
 spring.datasource.druid.test-on-borrow=true
-##################################
+#########################################################
 #模板引擎配置
 spring.thymeleaf.prefix=classpath:/html/
 #不强制关闭HTML标签
 spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML5
-#spring.thymeleaf.encoding=UTF-8
-# ;charset=<encoding> is added
-#spring.thymeleaf.content-type=text/html
-# set to false for hot refresh
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 #########################################################
 # mybatis 配置
@@ -52,3 +50,5 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mapper.mappers=com.wx.restaurant.util.MyMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
+#########################################################
+swagger.is.enable=true
