--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -11,9 +11,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/>
     </parent>
+
+    <properties>
+        <io.springfox.version>2.6.1</io.springfox.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -33,5 +37,18 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.36</version>
         </dependency>
+
+        <!-- swagger start -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${io.springfox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${io.springfox.version}</version>
+        </dependency>
+        <!-- swagger end -->
     </dependencies>
 </project>
