--- a/video/src/main/resources/application.properties
+++ b/video/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.session-timeout=60
 #server.address=114.215.122.158
 
 #druid
-druid.url=jdbc:mysql://127.0.0.1:3306/video_db?useUnicode=true&characterEncoding=utf-8&useSSL=false
+druid.url=jdbc:mysql://127.0.0.1:3306/video_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 druid.driver-class=com.mysql.jdbc.Driver
 druid.username=root
 druid.password=123456
