--- a/qiniu-layui/src/main/resources/application.properties
+++ b/qiniu-layui/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/basejpa
 spring.datasource.username=root
 spring.datasource.password=123456
+########################################################################
+# ÆßÅ£ÔÆ
 qiniu.accesskey=dFXhVMwiT-JTL9xZVY5XuyIWVaLhC5ujQIJX6USD
 qiniu.secretkey=qm3zJtHUXbf287wpMbaMdkFhQD4L39S21kxWrXHe
 qiniu.bucket=mybucket
-
+########################################################################
+#
 swagger.is.enable=true
